# workbench-tool-use-eval

./: README.md  run_workbench_hf.py  run_workbench_llama32_3b.py
WorkBench/: README.md  pyproject.toml
WorkBench/data/: tool_dependencies.json
WorkBench/data/results/analytics/: gpt-5-nano_all_2026-03-06_20-10-15.csv  qwen-qwen2-5-7b-instruct_all_2026-04-02_19-52-59.csv  qwen-qwen3-8b_all_2026-04-03_03-01-39.csv  qwen-qwen3-8b_domains_2026-04-04_23-40-21.csv
WorkBench/data/results/calendar/: gpt-5-nano_all_2026-03-06_18-53-13.csv  gpt-5-nano_planned_2026-03-09_17-54-36.csv  gpt-5-nano_planned_2026-03-09_19-37-54.csv  gpt-5-nano_planned_2026-03-09_21-12-43.csv  qwen-qwen2-5-7b-instruct_all_2026-04-02_18-24-27.csv  qwen-qwen3-8b_all_2026-04-03_00-44-08.csv  qwen-qwen3-8b_domains_2026-04-04_07-14-40.csv
WorkBench/data/results/customer_relationship_manager/: gpt-5-nano_all_2026-03-06_20-31-20.csv  gpt-5-nano_planned_2026-03-09_20-06-05.csv  gpt-5-nano_planned_2026-03-09_20-38-51.csv  qwen-qwen2-5-7b-instruct_all_2026-04-02_21-14-30.csv  qwen-qwen3-14b_all_2026-04-03_18-02-52.csv  qwen-qwen3-8b_all_2026-04-03_04-57-27.csv  qwen-qwen3-8b_domains_2026-04-04_01-11-58.csv
WorkBench/data/results/email/: gpt-5-nano_all_2026-03-06_19-25-45.csv  qwen-qwen3-14b_all_2026-04-03_06-43-05.csv  (+11 more)
WorkBench/scripts/: analyze_tool_dependencies.py  plan_tools.py
WorkBench/scripts/inference/: generate_results.py
WorkBench/src/evals/: utils.py
WorkBench/src/tools/: analytics.py  calendar.py  company_directory.py  customer_relationship_manager.py  email.py  project_management.py
(+5 files in other folders)
