[project]
name = "workbench"
version = "0.1.0"
description = "WorkBench: A tool-use benchmark for LLM agents (OpenAI-only fork)"
requires-python = ">=3.10"

dependencies = [
    "openai>=1.30.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "scikit-learn>=1.4.0",
    "pytest>=7.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
]
